--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -311,9 +311,7 @@
 
 #home-top>div.home-v5__searcher {
     background-color: #D3EAFF !important;
-    height: 257px;
-    display: flex;
-    align-items: center;
+    min-height: 257px;
 }
 
 #home-top {
