--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -317,6 +317,9 @@
 #home-top {
     margin-bottom: inherit !important;
 }
+.body.home.home--default .home-v5__searcher, .multi-searcher__content{
+    background-color: #D3EAFF !important;
+}
 
 .main__container__bannerTop {
     position: relative;
