--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -310,8 +310,8 @@
 }
 
 #home-top>div.home-v5__searcher {
-    background-color: #D3EAFF !important;
-    min-height: 257px;
+    /* background-color: #D3EAFF !important;
+    min-height: 257px; */
 }
 
 #home-top {
