--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -298,7 +298,7 @@
 }
 
 .modal__cupones {
-    max-width: 90%;
+    max-width: 80%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -318,6 +318,7 @@
     padding: 20px;
     flex-grow: 1; /* Add this line to allow content to grow and be scrollable */
     overflow-y: auto; /* Add this line to enable vertical scrolling when content overflows */
+    max-height: calc(100% - 40px);
 }
 
 .modal__content-title-circle,
