--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -229,6 +229,8 @@
     flex-grow: 1; /* Add this line to allow content to grow and be scrollable */
     overflow-y: auto; /* Add this line to enable vertical scrolling when content overflows */
     max-height: 93vh; /* Limit the height of the modal content */
+    scrollbar-width: thin; /* Para navegadores que soportan la propiedad scrollbar-width */
+    scrollbar-color: #c0c0c0 #f0f0f0;
 }
 
 .modal__content-title {
