--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -233,6 +233,9 @@
     scrollbar-color: #c0c0c0 #f0f0f0;
     border-top: 0 !important;
 }   
+.modal-content::-webkit-scrollbar {
+    display: none;
+}
 
 .modal__content-title {
     text-align: center;
