--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -225,7 +225,8 @@
     z-index: 1;
 }
 
-.modal-content {
+.modal-content,
+.modal-content__cupones-row {
     flex-grow: 1; /* Add this line to allow content to grow and be scrollable */
     overflow-y: auto; /* Add this line to enable vertical scrolling when content overflows */
     max-height: 93vh; /* Limit the height of the modal content */
@@ -350,12 +351,12 @@
     width: 100%;
 }
 
-.modal-content__cupones-row {
+/* .modal-content__cupones-row {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1rem;
-}
+} */
 
 .modal__content-uno,
 .modal__content-dos,
