--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -1,4 +1,17 @@
 /* MULT-71 // MULT-245*/
+/* IConImg */
+.main__container__iconImg {
+  position: absolute;
+  border-radius: 8px;
+  background: #FFF;
+  right: 16px;
+  bottom: 16px;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .recomendado {
   box-sizing: border-box;
   border: solid #1585e6;
@@ -25,7 +38,7 @@
   right: 24px !important;
 }
 
-.deals > .label-info {
+.deals>.label-info {
   display: inline-block;
   min-width: 161px !important;
   height: 33px !important;
@@ -39,7 +52,7 @@
 .alojamiento-recomendado {
   border-width: 2px 4px 2px 2px;
   border-style: solid;
-  border-color: #1585e6;
+  border-color: #1585E6;
   border-radius: 8px;
 }
 
@@ -57,13 +70,13 @@
   left: 10px;
 }
 
-.map-link > .glyphicon-map-marker {
+.map-link>.glyphicon-map-marker {
   font-size: 27px;
 }
 
 .map-link {
   display: none;
-  color: #0d4e88;
+  color: #0D4E88;
   font-size: 14px;
 }
 
@@ -72,7 +85,7 @@
   font-weight: 600;
   letter-spacing: 1px;
   height: 34px;
-  background: #0d4e88;
+  background: #0D4E88;
   border: 0;
   border-radius: 12px;
   float: none !important;
@@ -86,11 +99,11 @@
   text-align: end;
 }
 
-.info-card__actions > .btn-small {
+.info-card__actions>.btn-small {
   display: none;
 }
 
-.renderPriceTag > .pricetag__item--currency {
+.renderPriceTag>.pricetag__item--currency {
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
@@ -108,7 +121,7 @@
 
 .iconStar {
   display: none;
-  background: #1377ce;
+  background: #1377CE;
   color: white;
   border-radius: 100%;
   font-size: 19px;
@@ -116,12 +129,13 @@
   padding: 3px 2px;
   width: 25px;
   text-align: center;
+
 }
 
 .main__container__share {
-  width: 183px;
+  width: 215px;
   height: 24px;
-  background: #f3f3f3;
+  background: #F3F3F3;
   border-radius: 16px;
   display: flex;
   align-items: center;
@@ -132,8 +146,8 @@
 }
 
 .share__icon {
-  background: #ffffff;
-  border: 1px solid #0d4e88;
+  background: #FFFFFF;
+  border: 1px solid #0D4E88;
   border-radius: 12px;
   color: #094173;
   font-size: 12px;
@@ -153,17 +167,14 @@
 }
 
 .info-card__title {
-  max-width: 70% !important;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  max-width: 100% !important;
 }
 
 .info-card__action-item {
   display: none;
 }
 
-.info-card__category > .glyphicon .glyphicon-star {
+.info-card__category>.glyphicon .glyphicon-star {
   font-size: 21px;
 }
 
@@ -172,7 +183,7 @@
   height: 45px;
   display: flex;
   align-items: center;
-  background-color: #eaf4fc;
+  background-color: #EAF4FC;
   border-radius: 0px 16px 0px 0px;
   padding: 6px 24px 6px 12px;
 }
@@ -183,7 +194,7 @@
   left: 0;
 }
 
-.main__container__bannerMensageCard > p {
+.main__container__bannerMensageCard>p {
   margin-bottom: 0 !important;
 }
 
@@ -203,6 +214,122 @@
   display: inline-block;
 }
 
+/* Galery picture */
+.results .gallery__canvas {
+  top: 0 !important;
+}
+
+.gallery__image-wrapper {
+  overflow: hidden;
+  text-align: center;
+  width: 595px;
+  height: 80vh;
+  border-radius: 1rem;
+  margin: auto;
+  /* position: relative; */
+}
+
+.gallery__image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.modal-open .modal-gallery .gallery {
+  background: transparent !important;
+  height: 80vh;
+}
+
+.gallery__control.carousel-control .glyphicon {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #FFFFFF;
+  font-size: 43px;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  background: #1585E6;
+  border-radius: 100%;
+  justify-content: center;
+}
+
+.modal .modal-header {
+  width: 600px;
+  background-color: transparent;
+  font-size: 1.286rem;
+  padding: 10px;
+  border: none;
+  margin-bottom: 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-start;
+  margin: auto;
+}
+
+.modal-open .modal-gallery .close-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-open .modal-gallery .close {
+  color: #FFFFFF;
+  text-shadow: none;
+  border-radius: 8px;
+  border: 1px solid #FFF;
+  width: 88px;
+  height: 35px;
+  position: absolute;
+  right: 8px;
+}
+
+.modal .modal-content {
+  padding: 3% 10px 15px !important;
+  box-shadow: none !important;
+  width: 750px;
+  margin: auto;
+  border: transparent;
+}
+
+.modal-open .modal-gallery .close-icon {
+  display: none;
+}
+
+.gallery__control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+}
+
+.gallery__control--left {
+  left: 29px;
+
+}
+
+.gallery__control--right {
+  right: 45px;
+ 
+}
+
+.modal-open .modal-gallery__category {
+  display: none;
+}
+
+.modal-open .modal-gallery {
+  padding-left: 0;
+}
+
+
 @media (max-width: 767px) {
   .share__icon {
     width: 40px;
@@ -220,6 +347,7 @@
 
   .share__text {
     display: none;
+
   }
 
   .recomendado {
@@ -231,12 +359,13 @@
     left: -4px;
   }
 
-  .deals > .label-info {
+  .deals>.label-info {
     border-radius: 8px !important;
   }
 
   .result.hotel-result {
     height: 100%;
+
   }
 
   .results-list__item {
@@ -273,12 +402,13 @@
     position: relative;
   }
 
-  .info-card__content > .info-card__price {
+  .info-card__content>.info-card__price {
     position: absolute !important;
     width: 135px;
-    left: -17px;
+    left: -12px;
     top: 165px;
     height: 50px;
+
   }
 
   .info-card__category {
@@ -326,15 +456,9 @@
     text-align: left;
   }
 
-  .hotel-result {
-    height: 500px;
-    background: transparent;
-    border: 1px solid #cbcbcb;
-  }
-  .bestprice__taxincluded {
+  .main__container__iconImg {
     display: none;
   }
-
   /*
   Styles to display map in mobile
   */
@@ -350,7 +474,6 @@
     min-height: 495px;
   }
 }
-
 @media (min-width: 767px) and (max-width: 1024px) {
   .main__container__bannerMensageCard__App {
     width: 260px;
