--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -223,7 +223,7 @@
   overflow: hidden;
   text-align: center;
   width: 595px;
-  /* height: 80vh; */
+  height: 80vh;
   border-radius: 1rem;
   margin: auto;
   /* position: relative; */
