--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -472,6 +472,10 @@
     height: fit-content;
     min-height: 495px;
   }
+
+  .gallery__image-wrapper {
+    height: inherit;
+  }
 }
 @media (min-width: 767px) and (max-width: 1024px) {
   .main__container__bannerMensageCard__App {
