--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -15,17 +15,44 @@
     border-radius: 32px;
     border: 1px solid #FFF;
     background: var(--primary-blue-dark-usafa, #00325D);
+    color: #fff;
 }
 
 #mc_embed_signup_scroll {
     display: flex;
+    gap: 8px;
+    align-items: center;
 }
 
 .newsletter__container {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #00325D;
 }
-.home-row.home-v5.fix-margin{
+
+.home-row.home-v5.fix-margin {
+    width: 100%;
+    height: 276px;
     margin-bottom: 0 !important;
+}
+
+.main__container__newsletter__text>h2 {
+    color: var(--grey-scale-white, #F9F9F9);
+    font-family: Nunito;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+    letter-spacing: -0.32px;
+}
+
+.main__container__newsletter__text>p {
+    color: var(--grey-scale-grey-100, #DFDFDF);
+    font-family: Nunito;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: -0.18px;
 }
