--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -31,11 +31,13 @@
     background-color: #00325D;
 }
 
-/* .home-row.home-v5.fix-margin {
+.home-row.home-v5.fix-margin {
     width: 100%;
-    height: 276px;
     margin-bottom: 0 !important;
-} */
+}
+.fix-margin>.newsletter__container{
+    display: block !important;
+}
 
 .main__container__newsletter__text>h2 {
     color: var(--grey-scale-white, #F9F9F9);
