--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -28,15 +28,15 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #00325D;
 }
 
 .home-row.home-v5.fix-margin {
     width: 100%;
     margin-bottom: 0 !important;
+    background-color: #00325D;
 }
 .fix-margin>.newsletter__container{
-    display: block !important;
+    display: flex !important;
     height: 276px;
 }
 
