--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -30,7 +30,7 @@
     align-items: center;
 }
 
-.home-row.home-v5.fix-margin {
+.#main-content > div > div {
     width: 100%;
     margin-bottom: 0 !important;
     background-color: #00325D;
