--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 24px 0;
 }
 .fix-margin>.newsletter__container{
     display: flex !important;
@@ -57,4 +58,11 @@
     font-weight: 500;
     line-height: 24px;
     letter-spacing: -0.18px;
+}
+
+@media (max-width: 767px){
+    .fix-margin>.newsletter__container,
+    #mc_embed_signup_scroll{
+        flex-direction: column;
+    }
 }
