--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    padding: 24px 40px;
 }
 .fix-margin>.newsletter__container{
     display: flex !important;
