--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -66,5 +66,15 @@
     #mce-EMAIL,
     #mc-embedded-subscribe{
         width: 312px;
+        height: 50px;
+    }
+    .main__container__newsletter__text>h2{
+        font-size: 24px;
+    }
+    .main__container__newsletter__text>p {
+        font-size: 18px;
+    }
+    .fix-margin>.newsletter__container{
+        height: 358px;
     }
 }
