--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -32,6 +32,7 @@
 }
 .fix-margin>.newsletter__container{
     display: flex !important;
+    width: 100%;
     height: 276px;
     background-color: #00325D !important;
     border-radius: 48px 48px 0 0;
@@ -65,7 +66,6 @@
     }
     #mce-EMAIL,
     #mc-embedded-subscribe{
-        width: 312px;
         height: 50px;
     }
     .main__container__newsletter__text>h2{
