--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -39,6 +39,9 @@
 #main-content > div > div{
     margin-bottom: 0 !important;
 }
+.main__container__newsletter__text{
+    max-width: 510px;
+}
 
 .main__container__newsletter__text>h2 {
     color: var(--grey-scale-white, #F9F9F9);
@@ -47,6 +50,7 @@
     font-weight: 700;
     line-height: 38px;
     letter-spacing: -0.32px;
+    margin-bottom: 1rem;
 }
 
 .main__container__newsletter__text>p {
