--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -1,6 +1,6 @@
 #mce-EMAIL {
     max-width: 351px;
-    padding: 18px 0px 18px 18px;
+    padding: 18px 0px 18px 45px;
     align-items: center;
     gap: 6px;
     border-radius: 32px;
@@ -21,6 +21,12 @@
     display: flex;
     gap: 8px;
     align-items: center;
+    position: relative;
+}
+.icon_mc_embed{
+    position: absolute;
+    top: 18px;
+    left: 18px;
 }
 
 .newsletter__container {
