--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -80,6 +80,7 @@
     }
     .main__container__newsletter__text>h2{
         font-size: 24px;
+        margin-top: 1rem;
     }
     .main__container__newsletter__text>p {
         font-size: 18px;
