--- a/NewsletterrSeccion/style.css
+++ b/NewsletterrSeccion/style.css
@@ -76,6 +76,7 @@
     #mce-EMAIL,
     #mc-embedded-subscribe{
         min-width: 300px;
+        width: 100%;
         height: 50px;
     }
     .main__container__newsletter__text>h2{
