--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -162,8 +162,8 @@ source>img {
 
 .close-button-bitrix {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 3px;
+    right: 12px;
     font-size: 24px;
     cursor: pointer;
     z-index: 999999;
@@ -626,6 +626,9 @@ source>img {
 
     .b24-form-control-text .b24-form-control {
         height: 72px;
+    }
+    .bitrixFormTitle_text>p {
+        font-size: 14px;
     }
 }
 
