--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -153,6 +153,7 @@ source>img {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    margin-top: 5px;
 }
 
 .style__btn__britrix:hover {
