--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -300,7 +300,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: 36px 0;
+    margin: 0 0 36px 0;
     min-width: 25%;
     align-items: center;
     position: relative;
@@ -470,7 +470,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    bottom: -43px;
+    bottom: -26px;
     right: 34px;
     border: 0;
 }
