--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -362,6 +362,7 @@
 .modal__content-uno-title {
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 .modal-content__cupones-row {
@@ -380,6 +381,7 @@
 .modal__content-dos,
 .modal__content-tres {
     width: 93%;
+    height: 159px;
     display: flex;
     margin: 0.5rem;
     align-items: center;
@@ -391,6 +393,7 @@
 
 .modal__content-title-circleCalendar {
     display: flex;
+    justify-content: center;
     width: 100%;
     flex-direction: column;
     padding: 1rem;
@@ -470,7 +473,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    bottom: -26px;
+    bottom: 0;
     right: 34px;
     border: 0;
 }
