--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -560,6 +560,7 @@
     .modal__content-uno,
     .modal__content-dos,
     .modal__content-tres {
+        height: 100%;
         flex-direction: column;
     }
 
