--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -362,7 +362,7 @@
 .modal__content-uno-title {
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 159px;
 }
 
 .modal-content__cupones-row {
