--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -333,12 +333,15 @@
 .main__container__bannerTopTravelSale {
   color: white;
   padding: 20px;
-  width: 300px;
+  max-width: 1120px;
   justify-content: center;
-  margin: auto;
+  margin: 1rem auto;
+  display: flex;
+  align-items: center;
   display: none;
   border-radius: 8px;
   background: #6E37D0;
+
 }
 
 @media (max-width: 767px) {
