--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -441,6 +441,12 @@ source>img {
     display: none;
     border-radius: 16px;
     background: #6E37D0;
+    width: 1120px;
+    height: 144px;
+    flex-shrink: 0;
+    /* display: flex; */
+    align-items: center;
+    margin: 40px auto;
 }
 
 /* ---*-*-*-*-*-*-*-*-*-*- */
