--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -441,7 +441,7 @@ source>img {
     display: none;
     border-radius: 16px;
     background: #6E37D0;
-    width: 1120px;
+    max-width: 1120px;
     height: 144px;
     flex-shrink: 0;
     /* display: flex; */
