--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -447,6 +447,7 @@ source>img {
     /* display: flex; */
     align-items: center;
     margin: 40px auto;
+    overflow: hidden;
 }
 
 /* ---*-*-*-*-*-*-*-*-*-*- */
