--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -683,13 +683,21 @@ source>img {
     }
 }
 
-.priceStyle {
+.main_container_priceStyle {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     position: absolute;
-    bottom: 2%;
-    left: 10%;
+    bottom: 14.3%;
+    width: 100%;
+  }
+
+  .priceStyle {
+    position: relative;
     font-size: 20px;
     font-weight: 700;
-}
+  }
+
 
 /* Warning Price */
 .main__warningPrice {
