--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -551,7 +551,7 @@ source>img {
 
     /* BANNER TRAVEL SALE */
     .main__container_BannerTravelSale {
-        min-width: 310px;
+        width: 310px;
         height: 264px;
         margin: 20px 10px;
     }
