--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -330,19 +330,17 @@
 
 /* BANNERTOPTRAVEL */
 
-/* .main__container__bannerTopTravelSale {
+.main__container__bannerTopTravelSale {
   color: white;
   padding: 20px;
   max-width: 1120px;
   justify-content: center;
   margin: 1rem auto;
-  display: flex;
   align-items: center;
-  display: none;
   border-radius: 8px;
   background: #6E37D0;
 
-} */
+}
 
 @media (max-width: 767px) {
   .share__icon {
