--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -334,6 +334,7 @@
   color: white;
   padding: 20px;
   max-width: 1120px;
+  height: 128px;
   justify-content: center;
   margin: 1rem auto;
   align-items: center;
