--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -474,8 +474,8 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    bottom: 0;
-    right: 34px;
+    bottom: 20px;
+    right: 25px;
     border: 0;
 }
 
