--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -819,8 +819,8 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
-  bottom: 0;
-  right: 34px;
+  bottom: 17px;
+  right: 23px;
   border: 0;
 }
 
