--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -804,7 +804,7 @@
   display: none;
 }
 
-.cardCuponButtonStyle {
+.cardCuponButtonStyle-result {
   width: 101px;
   height: 38px;
   position: absolute;
@@ -824,12 +824,12 @@
   border: 0;
 }
 
-.cardCuponButtonStyle:hover {
+.cardCuponButtonStyle-result:hover {
   background: #FDCE07;
   color: #6E37D0;
 }
 
-.cardCuponButtonStyle:active {
+.cardCuponButtonStyle-result:active {
   border-radius: 40px;
   border: 2px solid #6E37D0;
   background: #FFF;
@@ -927,7 +927,7 @@
       height: 67px;
   }
 
-  .cardCuponButtonStyle {
+  .cardCuponButtonStyle-result {
       right: inherit;
       bottom: -23px;
   }
