--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -314,7 +314,7 @@
     margin-bottom: inherit !important;
 }
 .body.home.home--default .home-v5__searcher, .multi-searcher__content{
-    background-color: #D3EAFF !important;
+    background-color: #D0B1FF !important;
 }
 
 .main__container__bannerTop {
