--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -69,6 +69,9 @@
 
 /* BOTON CLOSE */
 .close-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 26px;
     height: 26px;
     background: #F9F9F9;
@@ -381,12 +384,6 @@
     .main_container__buttonARSEs,
     .btn_login-button {
         display: none;
-    }
-
-    .close-button>span {
-        position: absolute;
-        top: -12px;
-        right: 9px;
     }
 
     .emcabezadoModal>h3 {
