--- a/MULT205/style.css
+++ b/MULT205/style.css
@@ -44,7 +44,7 @@
 /* MULT-205 */
 .booking-data__data>.confirm-booking__holder-data {
     margin-bottom: 30px;
-    /* margin-top: 0 !important; */
+    margin-top: 0 !important;
 }
 
 .confirm-booking__promocodes {
