--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -332,17 +332,17 @@
 
 .main__container__bannerTopTravelSale {
   color: white;
-  padding: 20px;
   max-width: 1120px;
-  height: 128px;
+  height: 100%;
   justify-content: center;
   margin: 1rem auto;
   align-items: center;
   border-radius: 8px;
-  background: #6E37D0;
-  cursor: pointer;
+ 
+  overflow: hidden;
 
 }
+
 /* Promo AR */
 .banner__promo {
   display: flex;
@@ -381,7 +381,7 @@
 /* Mobile */
 @media (max-width: 767px) {
   .promo__ar {
-      flex-direction: column;
+    flex-direction: column;
   }
 }
 
@@ -487,78 +487,78 @@
 
 @media(max-width: 467px) {
   .modal__cupones {
-      width: 90%;
+    width: 90%;
   }
 }
 
 @media(max-width: 767px) {
 
   .modal__content-title-h3>h2 {
-      font-size: 16px;
+    font-size: 16px;
   }
 
   .container__conocer__cupones {
-      width: 94%;
-      border-radius: 16px 16px 16px 40px;
-      border: 1px solid #FFFFFF;
-      margin: auto;
-      margin-top: 9px;
+    width: 94%;
+    border-radius: 16px 16px 16px 40px;
+    border: 1px solid #FFFFFF;
+    margin: auto;
+    margin-top: 9px;
   }
 
   .confirm-booking__promocodes {
-      flex-direction: column;
-      align-items: flex-end;
-      min-height: 285px;
+    flex-direction: column;
+    align-items: flex-end;
+    min-height: 285px;
   }
 
   .promocodes {
-      margin: auto;
-      text-align: center;
+    margin: auto;
+    text-align: center;
   }
 
   .promocodes__container {
-      margin: auto;
-      width: 100%;
-      position: inherit;
+    margin: auto;
+    width: 100%;
+    position: inherit;
   }
 
   .close-modal-cupon {
-      top: 16px;
-      right: 21px;
+    top: 16px;
+    right: 21px;
   }
 
   .booking-breakdown__table .shopping-basket__line {
-      padding: 0 10px !important;
+    padding: 0 10px !important;
   }
 }
 
 
 @media(min-width:768px) and (max-width: 1025px) {
   .confirm-booking__promocodes {
-      justify-content: flex-end;
+    justify-content: flex-end;
   }
 
   .container__conocer__cupones {
-      max-width: 275px;
-      height: 130px;
-      position: relative;
+    max-width: 275px;
+    height: 130px;
+    position: relative;
   }
 
   .cupones__btn__style {
-      position: absolute;
-      left: 28%;
-      bottom: 16px;
+    position: absolute;
+    left: 28%;
+    bottom: 16px;
   }
 
   .promocodes__container {
-      position: absolute;
-      bottom: 16px;
-      left: 15%;
-      margin-left: 0;
+    position: absolute;
+    bottom: 16px;
+    left: 15%;
+    margin-left: 0;
   }
 
   .promocodes__container td {
-      padding: 4px 10px 0 !important;
+    padding: 4px 10px 0 !important;
   }
 }
 
@@ -867,68 +867,68 @@
 
 @media(max-width: 1024px) {
   .modal__content-title {
-      padding: 0;
+    padding: 0;
   }
 
   .modal__content-title>h2 {
-      font-size: 13px;
-      text-align: left;
-      width: 79%;
-      padding: 8px 16px;
+    font-size: 13px;
+    text-align: left;
+    width: 79%;
+    padding: 8px 16px;
   }
 
   .modal__content-uno-logo {
-      width: 100%;
-      border-radius: 1rem 1rem 0 0;
-      border-right: 0;
-      padding: 6px;
+    width: 100%;
+    border-radius: 1rem 1rem 0 0;
+    border-right: 0;
+    padding: 6px;
   }
 
   .modal__content-cupon {
-      padding: 5px;
-      width: 100%;
-      height: 63px;
+    padding: 5px;
+    width: 100%;
+    height: 63px;
   }
 
   .modal-content__cupones-row {
-      margin: 0 1rem;
+    margin: 0 1rem;
   }
 
   .modal__content-title-h3>h2 {
-      font-size: 19px;
-      line-height: 12px;
-      text-align: center;
-      line-height: 24px;
+    font-size: 19px;
+    line-height: 12px;
+    text-align: center;
+    line-height: 24px;
   }
 
   .modal__content-uno,
   .modal__content-dos,
   .modal__content-tres {
-      height: 100%;
-      flex-direction: column;
+    height: 100%;
+    flex-direction: column;
   }
 
   .modal__content-uno-title {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .modal__content-title-circleCalendar {
-      flex-direction: column;
-      align-items: center;
-      padding: 0.5rem 1rem;
-      border-bottom: 1px dashed #0D4E88;
-      border-left: 0px dashed #0D4E88;
-      border-right: 0;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px dashed #0D4E88;
+    border-left: 0px dashed #0D4E88;
+    border-right: 0;
   }
 
   .modal__content-dos-logo,
   .modal__content-tres-logo {
-      height: 67px;
+    height: 67px;
   }
 
   .cardCuponButtonStyle-result {
-      right: inherit;
-      bottom: -23px;
+    right: inherit;
+    bottom: -23px;
   }
 }
 
