change text hotel result

--- a/MULT324/style.css
+++ b/MULT324/style.css
@@ -535,9 +535,9 @@ source>img {
 }
 
 /* ---*-*-*-*-*-*-*-*-*-*- */
-/* .whatsAppFixes {
+.whatsAppFixes {
     display: none;
-} */
+}
 
 /* ---*-*-*-*-*-*-*-*-*-*- */
 /* MOBILE */
